z-index solved

--- a/layoutStyle.css
+++ b/layoutStyle.css
@@ -129,16 +129,14 @@ section > div > img{
 #meyveler{
     display: flex;
 }
-.kiraz{
-    z-index: 1001;
-}
+
 .kiraz, .mandalina{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: flex-end;
     padding:  2vh 8vw;
-    
+    z-index: 1;
 }
 
 .kiraz::before{
@@ -150,7 +148,7 @@ section > div > img{
     width: 100%;
     height: 100%;
     opacity: 0.9;
-
+    z-index: -1;
 }
 .mandalina::before{
     content: ' ';
@@ -161,6 +159,7 @@ section > div > img{
     width: 100%;
     height: 100%;
     opacity: 1;
+    z-index: -2;
 }
 #intro {
     background-color: #3ebfff;
